feat(oip): exclude Sundays from analytical calendars
